--- a/gradle.properties
+++ b/gradle.properties
@@ -16,3 +16,6 @@ org.gradle.jvmargs=-Xmx4G
 # Dependencies
 	# check this on https://modmuss50.me/fabric.html
 	fabric_version=0.128.1+1.21.5
+
+	cloth_config_version=18.0.145
+	modmenu_version=14.0.0-rc.2
